# BattingOrderOptimizer

./: .gitignore  Design.md  Gemini.md  README.md  main.py  pyproject.toml  task.md
app/services/: simulation.py
app/utils/: add_speed_score.py  generate_default_lineups.py  get_default_lineup.py  get_player_data.py  process_player_stats.py
data/processed/: 2024_b.csv  2024_c.csv  2024_d.csv  2024_db.csv  2024_e.csv  2024_f.csv  2024_g.csv  2024_h.csv  2024_l.csv  2024_m.csv  2024_s.csv  2024_t.csv
tests/: test_data_processing.py  test_generate_default_lineups.py  test_get_default_lineup.py  test_simulation.py
tests/dummy_data/processed/: 2024_test.csv
tests/dummy_data/raw/: 2024_test.csv
tests/dummy_html/: kiyou_m.html
