[project]
name = "battingorderoptimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "lxml>=6.0.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "streamlit>=1.47.0",
]
